--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,5 +1,5 @@
 en:
-  notice_unable_to_obtain_dataporten_credentials: "Unable to obtain credentials from Dataporten."
+  notice_unable_to_obtain_engine_credentials: "Unable to obtain credentials from ENGINE."
   notice_domain_not_allowed: "You can not login using %{domain} domain."
-  notice_access_denied: "You must allow to use you Dataporten credentials to enter this site."
-  login_via_dataporten: "Login via Dataporten"
+  notice_access_denied: "You must allow to use you ENGINE credentials to enter this site."
+  login_via_engine: "Login via ENGINE"
